exclude key directories

--- a/RealRender.ProductApiService/RealRender.ProductApiService.csproj
+++ b/RealRender.ProductApiService/RealRender.ProductApiService.csproj
@@ -11,6 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Dtempkeys\**" />
+    <Content Remove="Dtempkeys\**" />
+    <EmbeddedResource Remove="Dtempkeys\**" />
+    <None Remove="Dtempkeys\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.11">
