--- a/RealRender.IdentityService/RealRender.IdentityService.csproj
+++ b/RealRender.IdentityService/RealRender.IdentityService.csproj
@@ -11,6 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Dtempkeys\**" />
+    <Content Remove="Dtempkeys\**" />
+    <EmbeddedResource Remove="Dtempkeys\**" />
+    <None Remove="Dtempkeys\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="6.1.7" />
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.1.7" />
     <PackageReference Include="Duende.IdentityServer.EntityFramework" Version="6.1.7" />
